# relay

./: .env.example  .gitignore  AGENTS.md  SANDBOXING_ANALYSIS.md  SESSION.md  langgraph.json  main.py  pyproject.toml
.github/workflows/: ci.yml
relay/: __main__.py  graph.py  graph_reference.py  prompt.py  settings.py
relay/agents/: __init__.py  context.py  deep_agent.py  factory.py  react_agent.py  state.py
relay/checkpointer/: __init__.py  base.py  factory.py
relay/cli/: __init__.py  bootstrap.py  commands.py  renderer.py  session.py  streaming.py  threads.py
relay/configs/: __init__.py  agent.py  approval.py  llm.py  registry.py  sandbox.py  utils.py
relay/llms/: __init__.py  factory.py
relay/mcp/: __init__.py  cache.py  client.py  config.py  factory.py  loader.py  registry.py  session.py  tool.py
relay/middlewares/: __init__.py  approval.py  compress_tool_output.py  dynamic_prompt.py  pending_tool_result.py  permission.py  return_direct.py  sandbox.py  token_cost.py
relay/permission/: __init__.py  config.py  evaluate.py  schema.py  service.py
relay/resources/: __init__.py
relay/sandboxes/: __init__.py  backend.py  bubblewrap.py  constants.py  factory.py  worker.py
relay/skills/: factory.py
relay/tools/: __init__.py  factory.py  filesystem.py  memory.py  planning.py  schema.py  terminal.py  todo.py
relay/utils/: messages.py  paths.py  patterns.py
tests/: test_context.py  test_settings.py  test_state.py
tests/agents/: test_deep_agent.py  test_factory.py  test_react_agent.py
tests/checkpointer/: test_factory.py  test_memory.py  test_sqlite.py
tests/cli/: test_app.py  test_commands.py  test_initializer.py  test_messages.py  test_renderer.py  test_session.py  test_streaming.py
tests/configs/: __init__.py  test_agent.py  test_approval.py  test_registry.py  test_utils.py
tests/fixtures/: __init__.py
tests/integration/: conftest.py
tests/llms/: test_factory.py
tests/mcp/: test_cache.py  test_config.py  test_registry.py
tests/middlewares/: test_approval.py  test_compress_tool_output.py  test_dynamic_prompt.py  test_pending_tool_result.py  test_permission.py  test_return_direct.py  test_sandbox.py  test_token_cost.py
tests/permission/: __init__.py  test_config.py  test_evaluate.py  test_schema.py  test_service.py
tests/sandboxes/: test_bubblewrap.py  test_factory.py  test_worker.py
(+71 files in other folders)
